hphp/hack/test/typecheck/strict_no_statements3.php.exp
File "strict_no_statements3.php", line 4, characters 1-4:
Toplevel statements are not allowed. Use __EntryPoint attribute instead (Parsing[1002])
